--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ html {
   font-size: 62.5%;
 }
 body {
-  height: 100svh;
+  /* height: 100svh; */
+  min-height: 100svh;
   background-color: var(--color-Navy-950);
   font-family: "Rubik", sans-serif;
   font-size: 1.2rem;
@@ -45,8 +46,8 @@ body {
   border-radius: 2rem;
 }
 .user-photo {
-  width: 40%;
-  border: 4px solid var(--color-white);
+  width: 25%;
+  border: 3px solid var(--color-white);
   border-radius: 50%;
 }
 .user {
@@ -58,7 +59,8 @@ body {
   border-radius: 2rem;
 }
 .user-name {
-  font-size: 1.8rem;
+  font-size: 2.4rem;
+  font-weight: 300;
 }
 .user-action {
   padding: 1rem;
@@ -130,6 +132,7 @@ body {
 }
 .card-title {
   font-size: 1.8rem;
+  font-weight: 400;
   margin-bottom: 0.6rem;
 }
 .prev-time {
