--- a/style.css
+++ b/style.css
@@ -73,8 +73,12 @@ body {
   border: none;
   color: var(--color-Purple-500);
   font-size: 1.6rem;
+  transition: color 0.3s;
 }
 .btn-action:hover {
+  color: var(--color-white);
+}
+.btn-action.active {
   color: var(--color-white);
 }
 .card-work {
@@ -182,12 +186,12 @@ body {
   }
   .prev-time {
     color: var(--color-Purple-500);
-    font-size: 1.4rem;
+    font-size: 1.2rem;
   }
 }
 @media (min-width: 1000px) {
   .container {
-    max-width: 90rem;
+    max-width: 100rem;
     grid-template-columns: repeat(4, 1fr);
   }
   .user-section {
